deployments/gateway/004_envoy_gateway/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: ddd-learn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.27.8
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: ddd-learn
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mailpit
  ports:
    - name: smtp
      port: 1025
      targetPort: smtp
    - name: http
      port: 8025
      targetPort: http
