deployments/gateway/004_envoy_gateway/browser-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos-public
  namespace: ddd-learn
spec:
  parentRefs:
    - name: public-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kratos
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kratos-public
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-example
  namespace: ddd-learn
spec:
  parentRefs:
    - name: public-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ui-example
          port: 80
