deployments/gateway/004_envoy_gateway/mailpit-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit
  namespace: ddd-learn
spec:
  parentRefs:
    - name: public-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mailpit
      backendRefs:
        - name: mailpit
          port: 8025
